# jottings

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile.toml  README.md  build_cpp.sh  build_cpp_arrow.sh  notes.md
aio-demo/: Cargo.toml  README.md
aio-demo/src/: main.rs
algo/: Cargo.toml
algo/src/: graph_bfs_and_dfs.rs  lib.rs  printer_and_queue.rs
arrow-cpp/: CMakeLists.txt  README.md  compute.cpp  datasets.cpp  dev.cpp  file_io.cpp  starter.cpp
arrow-cpp/advanced/: flight_client.cpp  flight_client.py  flight_server.cpp  flight_server.py
arrow-cpp/demo/: IndexedOrderADCollection.hpp  OrderAD.cpp  OrderAD.h  check_pqt.py  lb_pqt.cpp
arrow-cpp/tutorial/: compute.cpp  datasets.cpp  file_io.cpp
arrow-flight/: README.md
arrow-flight/flight-cpp/: CMakeLists.txt  flight_server.cpp
arrow-flight/flight-py/: flight_client.py
arrow-flight/flight-rs/: Cargo.toml
arrow-flight/flight-rs/src/: flight_client.rs  flight_server.rs  lib.rs
arrow-ipc/: README.md
arrow-ipc/ipc-cpp/: CMakeLists.txt  dev.cpp  ipc_read.cpp  ipc_read.h  ipc_utils.cpp  ipc_utils.h  ipc_write.cpp  ipc_write.h  main_ipc_file.cpp  main_ipc_stream_client.cpp  main_ipc_stream_server.cpp  read_ipc.cpp  read_ipc.h  sync_tcp_daytime_client.cpp  tcp_daytime_server_async.cpp  tcp_daytime_server_sync.cpp  write_ipc.cpp  write_ipc.h
arrow-ipc/ipc-py/: dev.py  read_ipc_stream.py  write_ipc_stream.py
arrow-ipc/ipc-rs/: Cargo.toml
arrow-ipc/ipc-rs/src/: lib.rs  main.rs  read_ipc.rs  write_ipc.rs
cxx-demo/: Cargo.toml  README.md  build.rs
cxx-demo/include/: blobstore.h
cxx-demo/src/: blobstore.cc  main.rs
eigen-demo/: README.md  simple.cc
error-handling/: Cargo.toml
error-handling/src/: lib.rs
fsm/: README.md
fsm/fsm-cpp/: CMakeLists.txt  README.md
fsm/fsm-cpp/fsm/: Machine.cpp  Machine.h  MachineStates.cpp  MachineStates.h  States.cpp  States.h  main.cpp
fsm/fsm-cpp/fsm17/: StateMachine.h  StatesAndEvents.cpp  StatesAndEvents.h  TransitionTo.h  main.cpp
fsm/fsm-cpp/fsm17ehn/: Actions.h  Events.h  StateMachine.h  States.h  TransitionTo.h  main.cpp
fsm/fsm-rs/: Cargo.toml  README.md
fut-rs/: Cargo.toml  README.md
fut-rs/src/: fut.rs  gat.rs  lib.rs
hrtb/: Cargo.toml  README.md
hrtb/src/: async_processor.rs  lib.rs  main.rs
jotting/: Cargo.toml
jotting/mock/: cluster_map.json
jotting/src/: lib.rs
jotting/src/polars_loader/: mod.rs
jotting/src/std_traits/: error_handling.rs  mod.rs
jotting/src/taste_nom/: database_types_nom.rs  mod.rs
lambda-comparison/: .gitignore  README.md
lambda-comparison/lambda-cpp/: CMakeLists.txt  main.cpp  test.cpp
lambda-comparison/lambda-rs/: Cargo.toml
lambda-comparison/lambda-rs/src/: lib.rs
lambda_comparison/lambda_cpp/: main.cpp
lambda_comparison/lambda_rs/: Cargo.toml
lambda_comparison/lambda_rs/src/: lib.rs
log-tracing/: .gitignore  Cargo.toml  README.md  py_notify.py  write_test.py
log-tracing/src/: main.rs
log-tracing/tests/: simple.rs
mssql-tiberius/: Cargo.toml
mssql-tiberius/docker/: create_db_and_user.md  setup.mac.sh  setup.ubuntu.sh
mssql-tiberius/src/: lib.rs
mssql-tiberius/tests/: test_client.rs  test_client2.rs
polars-loader/: Cargo.toml
polars-loader/src/: index.rs  lib.rs
polars-loader/tests/: with_column_test.rs
polars-prober/: Cargo.toml  README.md
polars-prober/src/: custom_arrow_write.rs  impl_arrow_array.rs  index.rs  io_json.rs  join_types.rs  lib.rs  series_custom_iter.rs  unsafe_index.rs
polars-prober/tests/: with_column_test.rs
proc-macro-workshop/: Cargo.toml  README.md
proc-macro-workshop/debug/: Cargo.toml
proc-macro-workshop/debug/src/: lib.rs
proc-macro-workshop/debug/tests/: 03-custom-format.rs
ptr/: CMakeLists.txt  README.md
ptr/sp/: derived_shared.cpp  multi_threads.cpp
pycmd/: Cargo.toml  README.md
pycmd/scripts/: dev.csv  dev.py  dev2.py
pycmd/src/: main.rs
pyo3async/: Cargo.toml  Makefile  README.md  pyproject.toml
pyo3async/python/pyo3async/: __init__.py  pyo3async.pyi
pyo3async/src/: lib.rs
pyo3async/tests/: pyo3async_test.py  simple.rs
pyo3mongo/: .env  Cargo.toml  Makefile  requirements.txt
pyo3mongo/scripts/: create_graph.py
pyo3mongo/src/: db.rs  lib.rs  model.rs  package.rs  service.rs
rbmq-rs/: .gitignore  Cargo.toml  Makefile  README.md
rbmq-rs/scripts/: rpc_client.py  rpc_server.py  simple_recv.py  simple_send.py  simple_worker.py
rbmq-rs/src/: lib.rs
sqlx-arrow2/: .gitignore  Cargo.toml  README.md
sqlx-arrow2/src/: connector.rs  datagrid.rs  lib.rs
src/: lib.rs
src/conx_loader/: mod.rs
src/polars_loader/: mod.rs
src/pyo3mongo/: README.md  db.rs  mod.rs  model.rs  service.rs
src/std_traits/: deref_as_ref_as_mut.rs  mod.rs
src/taste_nom/: database_types_nom.rs
std-traits/: Cargo.toml
std-traits/src/: case_asmut.rs  commands.rs  gat_async_trait.rs  gat_fp.rs  iter_filter_dumb.rs  iter_filter_final.rs  iter_filter_improved.rs  lib.rs  tree_node_traverse.rs
stl-cpp/: CMakeLists.txt  const_set_iter.cpp  ranges_composition.cpp  read_csv.cpp
taste-nom/: Cargo.toml
taste-nom/src/: custom_error.rs  database_conn.rs  database_types_nom.rs  lib.rs
tile/: Cargo.toml  README.md
tile/src/: lib.rs
traits-cpp/: CMakeLists.txt  virtual_base.cpp
traits-rs/: Cargo.toml
traits-rs/src/: lib.rs
