[package]
name = "jotting"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
mongodb = "2.1.0"
nom = "7.1.0"
polars = "0.17.0"
pyo3 = { version = "0.15.1", features = ["extension-module"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
tokio = "1.15.0"
