[package]
name = "polars-prober"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = { version = "0", features = ["io_csv", "io_json", "io_parquet"]}
fallible-streaming-iterator = "0.1.9"
polars = { version = "0", features = ["lazy", "object"]}
ref-cast = "1"
uuid = { version = "1", features = ["v4"] }
