[package]
name = "pyo3async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3async"
crate-type = ["cdylib"]

[dependencies]
log = "0"
pyo3 = { version = "0", features = ["extension-module"] }
pyo3-asyncio = { version = "0", features = ["attributes", "tokio-runtime"] }
pyo3-log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
