[package]
name = "sqlx-arrow2"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow2 = { version = "0", features = ["full"] }
futures = "0"
sqlx = { version = "0", features = ["runtime-tokio-rustls", "postgres", "mysql", "mssql", "chrono"] }
tokio = { version = "1", features = ["full"] }
